2022-11-09  G. Branden Robinson <g.branden.robinson@gmail.com>

	* font/devpdf/util/BuildFoundries.pl (LoadFoundry): Stop
	capitalizing beginning of diagnostic message (per GNU Coding
	Standards).  Drop ellipsis from end since no further diagnostics
	relevant to that message are expected.  Trim trailing slashes
	from font path elements.

2022-11-08  G. Branden Robinson <g.branden.robinson@gmail.com>

	* font/devps/devps.am: Refactor.  Turn two identical target
	rules into a (BSD-make-style, old-fashioned) pattern rule.

2022-11-08  G. Branden Robinson <g.branden.robinson@gmail.com>

	* configure.ac: Rechristen self "GNU roff".

2022-11-07  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/preproc/pic/pic.ypp: Slightly refactor.  Rename parameter
	`form` (format) to `fmt` to make its nature as an abbreviation
	clear.
	(format_number, do_sprintf): Reorder null pointer equality
	comparisons to avoid inadvertent lvalue assignment.
	(do_sprintf): Declare lists of valid format conversion
	specifiers and modifiers explicitly instead of as happenstance
	literals.  Recast diagnostic messages to refer to "invalid", not
	"bad" input; refer to input keyword correct as "sprintf" (not
	"snprintf"); and report the identity of the invalid conversion
	specifier we reject.

2022-11-07  G. Branden Robinson <g.branden.robinson@gmail.com>

	* tmac/doc.tmac (Fl, doc-flag-recursion, doc-print-recursive)
	(doc-print-prefixes, Ar, Nm, Pa, Xr, doc-do-func, Fn)
	(doc-do-func-args, Fo): Remove now-relic resets of type size to
	previous value.  Since commit 5125754cdf, 23 February, no mdoc
	macro ever changes the type size.

2022-11-08  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/devices/gropdf/gropdf.pl: Provide more information in
	diagnostic issued when an embeddable font is required by the
	document and listed in the "download" file, but can't be opened.
	(LoadDownload): Construct a "path" of each file specification