@@ -110,11 +110,12 @@ font/devpdf/download: $(devpdffontmapdata) font/devpdf/DESC \
   font/devpdf/Foundry font/devpdf/enc/text.enc \
   font/devpdf/util/BuildFoundries
 	$(AM_V_GEN)$(MKDIR_P) $(top_builddir)/font/devpdf \
-	&& echo "# foundry	ps-name	psfile" >$@.tmp \
+	&& echo "# foundry	ps-font-name	ps-font-file" >$@.tmp \
+	&& echo "# A blank foundry is the default." >>$@.tmp \
 	&& PATH="$(abs_top_builddir)$(GROFF_PATH_SEPARATOR)$(abs_top_builddir)/build-aux$(GROFF_PATH_SEPARATOR)$(PATH)" \
 	     $(abs_top_builddir)/font/devpdf/util/BuildFoundries \
 	       --strict $(abs_top_builddir)/font/devpdf \
-	       '$(abs_top_srcdir)/font/devps : $(abs_top_builddir)/font/devps' \
+	       '$(abs_top_srcdir)/font/devps:$(abs_top_builddir)/font/devps' \
 	       >>$@.tmp \
 	&& mv $@.tmp $@
 
