@@ -1,5 +1,11 @@
 2022-11-09  G. Branden Robinson <g.branden.robinson@gmail.com>
 
+	* font/devpdf/devpdf.am (font/devpdf/download): Improve
+	comprehensibility of comments in generated "download" file.
+	Stop bracketing path element separator with spaces.
+
+2022-11-09  G. Branden Robinson <g.branden.robinson@gmail.com>
+
 	* font/devpdf/util/BuildFoundries.pl (LoadFoundry): Stop
 	capitalizing beginning of diagnostic message (per GNU Coding
 	Standards).  Drop ellipsis from end since no further diagnostics
